--- a/Exercícios EBAC Frontend/Módulo 13/index.html
+++ b/Exercícios EBAC Frontend/Módulo 13/index.html
@@ -59,7 +59,7 @@
     <!-- Cards -->
 
     <div class="container mt-4">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-4 col-md-6 col-12 mb-3">
           <div class="card">
             <img
